fixing margin-top on h2 so it doesn't go behind

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ h1 {
     font-size: 2em;
     font-weight: 700;
     color: #7F132F;
-    margin-top: 10em;
+    margin-top: 3em;
     margin-bottom: .3em;
     line-height: 1em;
 }
@@ -176,8 +176,7 @@ h4 {
 .full-logo {
     max-width: 20em;
     min-width: 15em;
-    margin-bottom: -90px;
-    height: 47em;
+    height: 20em;
     float: left;
 }
 
@@ -214,6 +213,7 @@ h4 {
 .content h2 {
     position: relative;
     margin-bottom: 1em;
+    margin-top: 4em;
     color: #7F132F;
     font-weight: 700;
     font-size: 4em;
@@ -297,8 +297,8 @@ h5 {
     .full-logo {
         max-width: 20em;
         min-width: 15em;
-        margin-bottom: -630px;
-        height: 47em;
+        margin-bottom: -180px;
+        height: 20em;
         float: none;
     }
 
@@ -311,9 +311,9 @@ h5 {
     }
 
     .nav li{
-    letter-spacing: 2px;
-    font-weight: 300;
-    font-size: 1.2em;
+        letter-spacing: 2px;
+        font-weight: 300;
+        font-size: 1.2em;
     }
 
     .nav-btn,
@@ -396,14 +396,15 @@ h5 {
     .full-logo {
         max-width: 20em;
         min-width: 15em;
-        margin-bottom: -260px;
-        height: 47em;
+        margin-bottom: -100px;
+        height: 20em;
         float: left;
     }
 
     .nav li{
         font-size: 1em;
     }
+
 
     .nav-btn,
     .nav-btn:link,
@@ -431,25 +432,18 @@ h5 {
     }
 
     .nav-top{
-    max-height: 0;
-    -moz-transition: all 265ms linear;
-    -o-transition: all 265ms linear;
-    -webkit-transition: all 265ms linear;
-    transition: all 265ms linear;
-    overflow:hidden;
+        max-height: 0;
+        -moz-transition: all 265ms linear;
+        -o-transition: all 265ms linear;
+        -webkit-transition: all 265ms linear;
+        transition: all 265ms linear;
+        overflow:hidden;
     }
 
     .nav-top[data-state="expanded"]{
-    max-height: 30rem;
-    margin-top:4rem;
-    margin-bottom: -4rem;
-    }
-
-    .full-logo{
-        float: none;
-        margin-top: 5em;
-        margin-bottom: -23em;
-        height: 100%;
+        max-height: 30rem;
+        margin-top:4rem;
+        margin-bottom: -4rem;
     }
 
     .social{
@@ -484,6 +478,6 @@ h5 {
     }
 
     .nav li a {
-        width: 160px;
+        width: 130px;
     }
 }
